--- a/arch/arm/configs/omap3_mws4_defconfig
+++ b/arch/arm/configs/omap3_mws4_defconfig
@@ -342,7 +342,6 @@ CONFIG_SOFT_WATCHDOG=y
 CONFIG_GPIO_WATCHDOG=y
 CONFIG_GPIO_WATCHDOG_ARCH_INITCALL=y
 CONFIG_OMAP_WATCHDOG=m
-CONFIG_TWL4030_WATCHDOG=y
 CONFIG_MFD_CPCAP=y
 # CONFIG_ABX500_CORE is not set
 CONFIG_MFD_TI_AM335X_TSCADC=m
@@ -539,12 +538,12 @@ CONFIG_LEDS_TRIGGER_CPU=y
 CONFIG_LEDS_TRIGGER_GPIO=m
 CONFIG_LEDS_TRIGGER_DEFAULT_ON=m
 CONFIG_RTC_CLASS=y
+CONFIG_RTC_DEBUG=y
 CONFIG_RTC_DRV_DS1307=m
 CONFIG_RTC_DRV_PCF8523=m
 CONFIG_RTC_DRV_PCF8563=m
 CONFIG_RTC_DRV_M41T80=m
 CONFIG_RTC_DRV_TWL92330=y
-CONFIG_RTC_DRV_TWL4030=y
 CONFIG_RTC_DRV_PALMAS=m
 CONFIG_RTC_DRV_OMAP=m
 CONFIG_RTC_DRV_CPCAP=m
